--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.3.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7"
+  },
+  "devDependencies": {
+    "prisma": "^6.3.1"
   }
 }
