--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "keywords": [],
   "author": "",
+  "type": "module",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.3.1",
