--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,1 @@
-# Node.js
-node_modules/
-npm-debug.log
-yarn-error.log
-
-# Logs
-logs/
-*.log
-*.log.*
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# IDEs and editors
-.vscode/
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Build directories
-dist/
-build/
-out/
-migrations/
-
-main-test.js
-githup-api-test.http
+.vscode
