--- a/crawler/package.json
+++ b/crawler/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "keywords": [],
   "author": "",
   "type": "module",
   "license": "ISC",
+  "jest": {
+    "transform": {}
+ },
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "axios": "^1.7.9",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "jest": "^29.7.0",
+    "semver": "^7.7.1"
   },
   "devDependencies": {
     "prisma": "^6.3.1"
