--- a/crawler/package.json
+++ b/crawler/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "keywords": [],
   "author": "",
@@ -12,15 +14,18 @@
   "license": "ISC",
   "jest": {
     "transform": {}
- },
+  },
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "@prisma/client": "^6.3.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "jest": "^29.7.0",
-    "semver": "^7.7.1"
+    "semver": "^7.7.1",
   },
   "devDependencies": {
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
     "prisma": "^6.3.1"
   }
 }
