--- a/crawler/package.json
+++ b/crawler/package.json
@@ -21,7 +21,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "jest": "^29.7.0",
-    "semver": "^7.7.1",
+    "semver": "^7.7.1"
   },
   "devDependencies": {
     "eslint": "^9.21.0",
