--- a/crawler/package.json
+++ b/crawler/package.json
@@ -20,6 +20,7 @@
 		"@prisma/client": "^6.3.1",
 		"axios": "^1.7.9",
 		"dotenv": "^16.4.7",
+		"fast-xml-parser": "^5.2.1",
 		"jest": "^29.7.0",
 		"peggy": "^4.2.0",
 		"semver": "^7.7.1"
