--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.48.1",
 		"clsx": "^2.1.1",
+		"fetch-retry": "^6.0.0",
 		"next": "15.1.7",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
